removed console log

--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
     <br>
     <div class="container text-center">
         <button type="button" class="btn btn-secondary" onclick="allOff()">All Off</button>
-        <button type="button" class="btn btn-secondary" onclick="auto()">Automatic</button>
-        <button type="button" class="btn btn-secondary" onclick="manual()">Manual</button>
+        <button id="auto-btn" type="button" class="btn btn-secondary" onclick="auto()">Automatic</button>
+        <button id="manual-btn" type="button" class="btn btn-secondary" onclick="manual()">Manual</button>
     </div>
     <!-- Links to scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
