replased manual with all_off

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div class="container text-center">
         <button type="button" class="btn btn-secondary" onclick="allOff()">All Off</button>
         <button id="auto-btn" type="button" class="btn btn-secondary" onclick="auto()">Automatic</button>
-        <button id="manual-btn" type="button" class="btn btn-secondary" onclick="manual()">Manual</button>
+        <button id="manual-btn" type="button" class="btn btn-secondary" onclick="allOff()">Manual</button>
     </div>
     <!-- Links to scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
